syntax = "proto3";

package dote.proto.api;

message ResponseStatus {
  bool success = 1;
  string error_message = 2;
}
